--- a/gym website/config.json
+++ b/gym website/config.json
@@ -10,6 +10,8 @@
         "gym_name": "Fitness Club",
         "tag_line":"Looking For a Fit Body Join Us",
         "gmail-user":"noor.alam.619@gmail.com",
-        "gmail-pass":"enteryourpassword"
+        "gmail-pass":"noor@6190",
+        
+        "no_of_post":5
     }
-}
+} 
