--- a/gym website/config.json
+++ b/gym website/config.json
@@ -9,8 +9,8 @@
         "git_url":"https://github.com/noorshanu",
         "gym_name": "Fitness Club",
         "tag_line":"Looking For a Fit Body Join Us",
-        "gmail-user":"noor.alam.619@gmail.com",
-        "gmail-pass":"noor@6190",
+        "gmail-user":"your mail",
+        "gmail-pass":"your password",
         
         "no_of_post":5
     }
